--- a/Labguide/14.adoc
+++ b/Labguide/14.adoc
@@ -106,7 +106,18 @@ kubectl get pods -n "$NAMESPACE"
 echo "----------------------Completed Installation of  pages----------------------------------"
 -------------
 
-=== Pipeline configuration
+=== Set-up Github Actions
+
+. Create the following secrets in github
++
+[source, shell script]
+-------------
+AWS_ACCESS_KEY_ID
+AWS_SECRET_ACCESS_KEY
+AWS_REGION
+STAGING_NAMESPACE
+RELEASE_NAME
+-------------
 
 . Configure the pipeline
 
@@ -125,7 +136,6 @@ on:
 jobs:
   deploy-to-staging:
     runs-on: ubuntu-latest
-    needs:  deploy-to-kind
     steps:
       - uses: actions/checkout@v2
       - name: AWS Credentials
