--- a/Labguide/12.adoc
+++ b/Labguide/12.adoc
@@ -436,6 +436,51 @@ kubectl port-forward svc/pagesapp-api 8080:8080
 . Test the pages application by performing CRUD operations using curl/postman.
 Refer <<07-Pages-Curl-Commands.adoc#pages-curl-section, Pages Curl Guide>> for testing.
 
+=== Add NOTES for chart users
+. It is a recommended best practice to add a `NOTES.txt` containing instructions for accessing the installed application.
+This file is customizable as per the chart user needs.
+
+. Before adding the notes, add a label to the api service `access=external` for easy accessibility of the service.
+
+. Create `NOTES.txt` file in the templates directory of the parent chart
++
+[source, shell script]
+---------------
+touch ~/workspace/helm-charts/pages/charts/api/templates/NOTES.txt
+---------------
+
+. Below is a sample text for our `NOTES.txt`, which is customizable according to application usability
+
++
+`~/workspace/helm-charts/pages/charts/api/templates/NOTES.txt`
++
+[source, shell script]
+---------------
+
+Thank you for installing {{ .Chart.Name }}.
+
+Your release is named {{ .Release.Name }}.
+
+To learn more about the release, try:
+
+helm status {{ .Release.Name }}
+helm get all {{ .Release.Name }}
+
+To access the application, try:
+
+SVC=$(kubectl get svc -l access=external --namespace {{ .Release.Namespace }} -l access=external | awk 'NR==2{print $1}')
+
+kubectl --namespace {{ .Release.Namespace }} port-forward svc/$SVC 8080:8080
+---------------
+
+. Re-install/update the umbrella chart for pages app
+
++
+[source, shell script]
+---------------
+helm upgrade api pages -n dev
+---------------
+
 === Task Accomplished
 
 Devops team was successful in refactoring the helm chart to be simple and reusable.
