--- a/Labguide/06.adoc
+++ b/Labguide/06.adoc
@@ -31,119 +31,7 @@ Create all manifest resources in the directory `~/workspace/kubernetes-manifests
 
 === Configmaps and Secrets
 
-. Create a ConfigMap course-config from literal values with key=`course` and value=`k8s` imperatively. Create environment variables for nginx pod with key=`course` and value to be read from the configmap.
-Hint: `configMapKeyRef`
-
-+
-
-.Click to see solution
-[%collapsible]
-====
-[source, shell script]
-------------------
-kubectl create configmap course-config --from-literal=course=k8s
-------------------
-
-`~/workspace/kubernetes-manifests/competencies/configuration/pod-1.yaml`
-[source, yaml]
-------------------
-apiVersion: v1
-kind: Pod
-metadata:
-  labels:
-    run: nginx
-  name: nginx
-spec:
-  containers:
-  - image: nginx
-    name: nginx
-    env:
-      - name: course
-        valueFrom:
-          configMapKeyRef:
-            name: course-config
-            key: course
-------------------
-
-[source, shell script]
-------------------
-kubectl apply -f ~/workspace/kubernetes-manifests/competencies/configuration/pod-1.yaml
-------------------
-[source, shell script]
-------------------
-kubectl get cm course-config
-------------------
-[source, shell script]
-------------------
-kubectl get po nginx
-kubectl exec -it nginx -- env
-------------------
-[source, shell script]
-------------------
-kubectl delete po nginx
-------------------
-====
-. Create the above ConfigMap using yaml. Create a nginx pod and read the environment variables key and value from ConfigMap
-Hint: `configMapRef`
-
-+
-
-.Click to see solution
-[%collapsible]
-====
-`~/workspace/kubernetes-manifests/competencies/configuration/cm-2.yaml`
-[source, yaml]
-------------------
-apiVersion: v1
-data:
-  course: k8s
-kind: ConfigMap
-metadata:
-  name: course-config
-------------------
-
-`~/workspace/kubernetes-manifests/competencies/configuration/pod-1.yaml`
-[source, yaml]
-------------------
-apiVersion: v1
-kind: Pod
-metadata:
-  labels:
-    run: nginx
-  name: nginx
-spec:
-  containers:
-  - image: nginx
-    name: nginx
-    env:
-      - name: course
-        valueFrom:
-          configMapKeyRef:
-            name: course-config
-            key: course
-------------------
-
-[source, shell script]
-------------------
-kubectl apply -f ~/workspace/kubernetes-manifests/competencies/configuration/cm-2.yaml
-kubectl apply -f ~/workspace/kubernetes-manifests/competencies/configuration/pod-1.yaml
-------------------
-[source, shell script]
-------------------
-kubectl get cm course-config
-------------------
-[source, shell script]
-------------------
-kubectl get po nginx
-kubectl exec -it nginx -- env
-------------------
-[source, shell script]
-------------------
-kubectl delete po nginx
-------------------
-====
-
-. Create a ConfigMap `pages-config` from literal values with key='PAGE_CONTENT' and value=`Hello from pages environment` imperatively. Create environment variables for pages aplication with key=`PAGE_CONTENT` and value to be read from the configmap. - Instructions
+. Create a ConfigMap `pages-config` from literal values with key=`PAGE_CONTENT` and value=`Hello from pages environment` imperatively. Create environment variables for pages aplication with key=`PAGE_CONTENT` and value to be read from the configmap
 
 +
 
@@ -193,7 +81,7 @@ kubectl exec -it pages -- env
 kubectl delete po pages
 ------------------
 ====
-. Create the above ConfigMap using yaml. Create a nginx pod and read the environment variables key and value from ConfigMap. - Instructions
+. Create the above ConfigMap using yaml. Create a nginx pod and read the environment variables key and value from ConfigMap
 
 +
 
@@ -252,69 +140,16 @@ kubectl delete po pages
 ------------------
 ====
 
-. Create a ConfigMap from a properties file with key=`course` and value=`k8s`. Create a nginx pod and mount the configmap as a volume.
-
+. Create a configMap called `pages-config` from the configuration file called `application.properties` that will be used by Pages application.
+Mount this configmap as a volume while creating pod for `pages` application.
+**Get the container image to be used from the instructors**
 +
-
-.Click to see solution
-[%collapsible]
-====
-`~/workspace/kubernetes-manifests/competencies/configuration/cm-5.yaml`
-[source, yaml]
+`application.properties`
++
+[source, textmate]
 ------------------
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: course-config
-data:
-  course-info.properties: |
-    course: k8s
+page.content=Hello from pages environment
 ------------------
-
-`~/workspace/kubernetes-manifests/competencies/configuration/pod-5.yaml`
-[source, yaml]
-------------------
-apiVersion: v1
-kind: Pod
-metadata:
-  labels:
-    run: nginx
-  name: nginx
-spec:
-  volumes:
-    - name: config-vol
-      configMap:
-        name: course-config
-  containers:
-  - image: nginx
-    name: nginx
-    volumeMounts:
-      - name: config-vol
-        mountPath: /etc/config
-------------------
-
-[source, shell script]
-------------------
-kubectl apply -f ~/workspace/kubernetes-manifests/competencies/configuration/cm-5.yaml
-kubectl apply -f ~/workspace/kubernetes-manifests/competencies/configuration/pod-5.yaml
-------------------
-[source, shell script]
-------------------
-kubectl get cm course-config
-------------------
-[source, shell script]
-------------------
-kubectl get po nginx
-kubectl exec -it nginx -- ls /etc/config
-kubectl exec -it nginx -- cat /etc/config/course-info.properties
-------------------
-[source, shell script]
-------------------
-kubectl delete po nginx
-------------------
-====
-
-. Create a configMap from application.properties used by Pages application. Mount this configmap as a volume while creating pod for pages application - Instructions
 
 +
 
@@ -376,117 +211,8 @@ kubectl delete po pages
 ------------------
 ====
 
-. Create a secret `course-secret` from literal value with key=`auth-token` and value=base 64 encoded value of `token-e8ujdekdjueke` imperatively. Create environment variable for nginx pod with key=`auth-token` and value to be read from the secret.
-Hint: `secretMapKeyRef`
-
-+
-
-.Click to see solution
-[%collapsible]
-====
-[source, shell script]
-------------------
-kubectl create secret generic course-secret --from-literal=auth-token=token-e8ujdekdjueke
-kubectl get secret course-secret
-------------------
-
-`~/workspace/kubernetes-manifests/competencies/configuration/pod-7.yaml`
-[source, yaml]
-------------------
-apiVersion: v1
-kind: Pod
-metadata:
-  labels:
-    run: nginx
-  name: nginx
-spec:
-  containers:
-  - image: nginx
-    name: nginx
-    env:
-      - name: auth-token
-        valueFrom:
-          secretKeyRef:
-            name: course-secret
-            key: auth-token
-------------------
-
-[source, shell script]
-------------------
-kubectl apply -f ~/workspace/kubernetes-manifests/competencies/configuration/pod-7.yaml
-------------------
-[source, shell script]
-------------------
-kubectl get po nginx
-kubectl exec -it nginx -- env
-------------------
-[source, shell script]
-------------------
-kubectl delete po nginx
-------------------
-====
-
-. Create a secret `course-secret` from literal value with key=`auth-token` and value=base 64 encoded value of `token-e8ujdekdjueke` using manifest files. Create environment variable for nginx pod with key=`auth-token` and value to be read from the secret.
-Hint: `secretMapKeyRef`
-
-+
-
-.Click to see solution
-[%collapsible]
-====
-`~/workspace/kubernetes-manifests/competencies/configuration/secret-8.yaml`
-[source, yaml]
-------------------
-apiVersion: v1
-kind: Secret
-metadata:
-  name: course-secret
-data:
-  auth-token: dG9rZW4tZTh1amRla2RqdWVrZQ==
-------------------
-
-`~/workspace/kubernetes-manifests/competencies/configuration/pod-8.yaml`
-[source, yaml]
-------------------
-apiVersion: v1
-kind: Pod
-metadata:
-  labels:
-    run: nginx
-  name: nginx
-spec:
-  containers:
-  - image: nginx
-    name: nginx
-    env:
-      - name: auth-token
-        valueFrom:
-          secretKeyRef:
-            name: course-secret
-            key: auth-token
-------------------
-
-[source, shell script]
-------------------
-kubectl apply -f ~/workspace/kubernetes-manifests/competencies/configuration/secret-8.yaml
-kubectl apply -f ~/workspace/kubernetes-manifests/competencies/configuration/pod-8.yaml
-------------------
-[source, shell script]
-------------------
-kubectl get secret course-secret
-------------------
-[source, shell script]
-------------------
-kubectl get po nginx
-kubectl exec -it nginx -- env
-------------------
-[source, shell script]
-------------------
-kubectl delete po nginx
-------------------
-====
-
-. Create a secret `pages-secret` from literal values with key=`password` and value=base 64 encoded value of `admin@123` imperatively. Create environment for Pages application with key=`password` and value to be read from the secret.
+. Create a secret `pages-secret` from literal values with key=`password` and value,  `base 64` encoded `admin@123` imperatively. Create environment variable for Pages application with key=`password` and value to be read from the secret.
+Use the `pages image` same as that in the previous exercise.
 
 +
 
